--- a/fonts/fonts_main.css
+++ b/fonts/fonts_main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: HelveticaNeueLt27;
-    src: url("/fonts/Helvetica_Lt.ttf");
+    src: url("../fonts/Helvetica_Lt.ttf");
 }
 
 @font-face {
