--- a/css/main.scss
+++ b/css/main.scss
@@ -4,8 +4,8 @@ body, html {
   font-size: 100%; 
   padding: 0; 
   margin: 0;
-  color: #000;
-  overflow-x: hidden;
+  color: #fff;
+
 }
 
 img.typeface {
@@ -170,7 +170,7 @@ img.typeface {
 */
 .bg-main {
     background: #fff;
-    background-image: url();
+    background-image: url('../img/main_bg1.jpg');
     background-size: cover;
     position: fixed;
     top: 0;
@@ -200,7 +200,7 @@ img.typeface {
   bottom: 0;
   left: 0;
   z-index: 5;
-  background: transparent url('../img/thumb/1.pn') left bottom no-repeat;
+  background: transparent url('../img/thumb/1png') left bottom repeat;
   background-size: cover;
   transform: translate3d(0, 0, 0);
 }
@@ -247,6 +247,8 @@ img.typeface {
 /*
 *TAGLINE
 */
+
+/*
 ul{
     display: block;
     list-style-type: disc;
@@ -338,6 +340,42 @@ h5{
     
 }
 
+*/
+
+#main{
+    width: 100%;
+    height: 1080px;
+    max-width: 100%;
+    max-height:auto;
+    
+}
+
+.whenwebuild_text{
+    height: 240px;
+    width: 697px;
+}
+
+svg {
+  path {
+    stroke: #fff;
+    stroke-width: 3;
+    stroke-dasharray: 1000px;
+    stroke-dashoffset: 1000px;
+    animation-name: draw;
+    animation-duration: 8s;
+    animation-fill-mode: forwards; // Stay on the last frame
+    animation-iteration-count: 1; // Run only once
+    animation-timing-function: linear;
+    
+  }
+}
+
+@keyframes draw {
+  to {
+    transition: ease-in;
+    stroke-dashoffset: 0;
+  }
+}
 
 /*=======================
 *PROJECTS
@@ -691,8 +729,9 @@ footer {
   position: absolute;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 300px;
-  background-color: #454733;
+  height: 200px;
+  background-color: #1e1f20;
+  display: block;
 }
 
 
@@ -749,4 +788,36 @@ footer {
 }
 .burger-menu.menu-on .burger{
  background: rgba(111,111,111,.0);
+}
+
+#site-wrapper{
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+}
+
+#site-canvas{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform: translateX(0);
+    transform: translate3d(0, 0, 0);
+    transition: 300ms ease all;
+    padding: 5% 0;
+    backface-visibility: hidden;
+}
+
+#site-menu{
+    width: 500px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: -500px;
+    background: #fff;
+    padding: 15%;
+}
+
+.show-nav #site-canvas{
+    transform: translateX(500px);
+    transform: translate3d(500px, 0, 0);
 }
