--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,8 @@ body, html {
   padding: 0; 
   margin: 0;
   color: #fff;
-
+  overflow-x: hidden;
+  transition: all 0.8s;
 }
 
 img.typeface {
@@ -170,39 +171,27 @@ img.typeface {
 */
 .bg-main {
     background: #fff;
-    background-image: url('../img/main_bg1.jpg');
+    background-image: url('../img/main_bg2.jpg');
     background-size: cover;
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-}
-
-.bg-main .bg-layer{
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  opacity: 0;
-  z-index: 6;
-  transition: opacity 0.5s ease;
-  transform: translate3d(0, 0, 0);
+    z-index: -2;
 }
 
 .bg-layer-move {
   width: 100%;
-  height: 900px;
+  height: 100%;
   position: relative;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   z-index: 5;
-  background: transparent url('../img/thumb/1png') left bottom repeat;
   background-size: cover;
-  transform: translate3d(0, 0, 0);
+  background-repeat: repeat-x;
 }
 
 @media (max-width: 550px) {
@@ -212,135 +201,21 @@ img.typeface {
 }
 
 .x1 {
-  -moz-animation: move-layer-bg 40s linear infinite;
-  -webkit-animation: move-layer-bg 40s linear infinite;
-  animation: move-layer-bg 40s linear infinite;
-  width: 2036px;
-  height: 1608px;
+  -moz-animation: move-layer-bg 50s linear infinite;
+  -webkit-animation: move-layer-bg 50s linear infinite;
+  animation: move-layer-bg 50s linear infinite;
+  width: 2220px;
+  height: 1080px;  
 }
 
-@-webkit-keyframes move-layer-bg {
+@keyframes move-layer-bg {
   0% {
     margin-left: 100%;
   }
   100% {
-    margin-left: -1400px;
+    margin-left: -1800px;
   }
 }
-@-moz-keyframes move-layer-bg {
-  0% {
-    margin-left: 100%;
-  }
-  100% {
-    margin-left: -1400px;
-  }
-}
-@-o-keyframes move-layer-bg {
-  0% {
-    margin-left: 100%;
-  }
-  100% {
-    margin-left: -1400px;
-  }
-}
-
-/*
-*TAGLINE
-*/
-
-/*
-ul{
-    display: block;
-    list-style-type: disc;
-    -webkit-margin-before: 1em;
-    -webkit-margin-after: 1em;
-    -webkit-margin-start: 0px;
-    -webkit-margin-end: 0px;
-    -webkit-padding-start: 40px;
-}
-
-li{
-    text-align: webkit-match-parent;
-}
-
-.whenwebuild_block{
-    height: 33.3%;
-}
-
-.whenwebuild_title{
-    text-align: center;
-    z-index: 2;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    
-    :before{
-    display: inline-block;
-    margin-left: -0.25em;
-    height: 100%;
-    vertical-align: middle;
-    }
-    
-    .col-right{
-    margin-left: 10px;
-    margin-right: 10px;
-    }
-    
-    .col-left{
-        span{
-        font-size: 1em;
-        transform: rotate(-90deg);
-
-        }
-    }
-    
-    .whenwebuild_inner{
-        display: inline-block;
-        max-width: 99%;
-        position: relative;
-        padding: 0 57px;
-        vertical-align: middle;
-    }
-    
-    ul{
-    float: left;
-    }
-    
-    li{
-    line-height: 180%;
-    font-size: 2em;   
-        span{
-            display: inline-block;
-            transform: translate(0,0);
-            transition: transform 750ms cubic-bezier(1, 0.02, 0.1, 1),opacity 500ms cubic-bezier(1, 0.02, 0.1, 1)
-        }
-    }
-}
-
-
-
-h5{
-     top: 0;
-     font-family: OpenSansSB;
-     transform:rotate(-90deg);
-    
-
-
-}
-     li{
-     transform: none;
-     list-style: none;
-     }
-
-.tag>h1{
-     font-family:OpenSansSB;
-     font-size: 105px;
-     left: -50%;
-     vertical-align: bottom;
-    
-}
-
-*/
 
 #main{
     width: 100%;
@@ -368,6 +243,16 @@ svg {
     animation-timing-function: linear;
     
   }
+}
+
+#Layer_1{
+    margin-top: 10%;
+}
+
+#Layer_2{
+    margin-top: 18%;
+    margin-right: -10px;
+    
 }
 
 @keyframes draw {
@@ -678,8 +563,61 @@ span.nav-close:before {
 *COLLABORATION
 =======================*/
 #collaboration{
-    color: #000;
-    height: 800px;
+    color: #fff;
+    height: 500px;
+    font-family: Lato_thin;    
+    
+    .collab_padding{
+    padding: 150px 0 150px 0;
+    }
+    
+    .collab_hi{
+    text-align: right;
+    font-family: Lato_bold;
+       
+        h2{
+            font-size: 100px;
+            vertical-align: center;
+            margin-top: -20px;
+        }
+    }
+    
+    h3{
+    padding-top: 50px;
+    font-size: 40px;
+    font-family: Lato_thinitalic;
+    }
+    
+    h4{
+    font-family: Lato_thin;
+    font-size: 25px;
+    color: #aaa;
+        :after{
+        border-bottom: 2px solid #fff;
+        }
+    }
+    
+    h6{
+    color: #aaa;
+    padding-bottom: 60px;
+    }
+    h6 span {
+      background: #fff;
+      padding: 0 15px;
+      position: relative;
+      z-index: 1;
+    }
+
+    h6:before {
+      background: #ddd;
+      content: "";
+      display: block;
+      height: 1px;
+      position: absolute;
+      top: 15%;
+      width: 90%;
+    }   
+    
 }
     
 /*=======================
@@ -692,6 +630,46 @@ span.nav-close:before {
 =======================*/
 #codeplay{
     height: 700px;
+    position: relative;
+    background-image: url('../img/cpfb.svg');
+    background-size: cover;
+    
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+   
+    :after{
+    opacity: 0.5;
+    }
+    
+    img{
+    position: absolute;
+    width: 60%;
+    height: auto;
+    top: 250px;
+    height: auto;
+    left: 30%;
+    }
+    
+    .codeplay_text{
+    position: absolute;
+    bottom: 10%;
+    right: 0;    
+
+    }
+    h1{
+    font-family: Lato_semibold;
+    font-size: 80px;
+    }
+    h2{
+    font-family: Lato_thinitalic;
+        span{
+        font-family: Lato_light;
+        color: #f76969;
+        }
+    }
+    
 }  
 
 
@@ -721,103 +699,339 @@ span.nav-close:before {
     
     }
 }
-    
+
+/*==============================
+*NAVIGATION
+==============================*/
+.hamburger {
+  background: transparent;
+  border: none;
+  display: block;
+  height: 32px;
+  margin-left: 15px;
+  position: fixed;
+  top: 20px;
+  width: 32px;
+  z-index: 4999;
+}
+.hamburger:hover {
+  outline: none;
+}
+.hamburger:focus {
+  outline: none;
+}
+.hamburger:active {
+  outline: none;
+}
+.hamburger.is-closed:before {
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-transition: all 0.35s ease-in-out;
+  color: #ffffff;
+  content: '';
+  display: block;
+  font-size: 14px;
+  line-height: 32px;
+  opacity: 0;
+  text-align: center;
+  width: 100px;
+}
+.hamburger.is-closed:hover before {
+  -webkit-transform: translate3d(-100px, 0, 0);
+  -webkit-transition: all 0.35s ease-in-out;
+  display: block;
+  opacity: 1;
+}
+.hamburger.is-closed:hover .hamb-top {
+  -webkit-transition: all 0.35s ease-in-out;
+  top: 0;
+}
+.hamburger.is-closed:hover .hamb-bottom {
+  -webkit-transition: all 0.35s ease-in-out;
+  bottom: 0;
+}
+.hamburger.is-closed .hamb-top {
+  -webkit-transition: all 0.35s ease-in-out;
+  background-color: rgba(255, 255, 255, 0.7);
+  top: 5px;
+}
+.hamburger.is-closed .hamb-middle {
+  background-color: rgba(255, 255, 255, 0.7);
+  margin-top: -2px;
+  top: 50%;
+}
+.hamburger.is-closed .hamb-bottom {
+  -webkit-transition: all 0.35s ease-in-out;
+  background-color: rgba(255, 255, 255, 0.7);
+  bottom: 5px;
+}
+.hamburger.is-closed .hamb-top,
+.hamburger.is-closed .hamb-middle,
+.hamburger.is-closed .hamb-bottom,
+.hamburger.is-open .hamb-top,
+.hamburger.is-open .hamb-middle,
+.hamburger.is-open .hamb-bottom {
+  height: 4px;
+  left: 0;
+  position: absolute;
+  width: 100%;
+}
+.hamburger.is-open .hamb-top {
+  -webkit-transform: rotate(45deg);
+  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.73, 1, 0.28, 0.08);
+  background-color: #fff;
+  margin-top: -2px;
+  top: 50%;
+}
+.hamburger.is-open .hamb-middle {
+  background-color: #fff;
+  display: none;
+}
+.hamburger.is-open .hamb-bottom {
+  -webkit-transform: rotate(-45deg);
+  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.73, 1, 0.28, 0.08);
+  background-color: #fff;
+  margin-top: -2px;
+  top: 50%;
+}
+.hamburger.is-open:before {
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-transition: all 0.35s ease-in-out;
+  color: #ffffff;
+  content: '';
+  display: block;
+  font-size: 14px;
+  line-height: 32px;
+  opacity: 0;
+  text-align: center;
+  width: 100px;
+}
+.hamburger.is-open:hover before {
+  -webkit-transform: translate3d(-100px, 0, 0);
+  -webkit-transition: all 0.35s ease-in-out;
+  display: block;
+  opacity: 1;
+}
+
+.nav .open > a {
+  background-color: transparent;
+}
+.nav .open > a:hover {
+  background-color: transparent;
+}
+.nav .open > a:focus {
+  background-color: transparent;
+}
+
+.sidebar-nav {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 0;
+  width: 220px;
+}
+.sidebar-nav li {
+  z-index: 4999;
+  display: inline-block;
+  line-height: 20px;
+  position: relative;
+  width: 100%;
+}
+.sidebar-nav li:before {
+  background-color: #1c1c1c;
+  content: '';
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  -webkit-transition: width 0.2s ease-in;
+  transition: width 0.2s ease-in;
+  width: 3px;
+  z-index: -1;
+}
+.sidebar-nav li:first-child a {
+  background-color: #1a1a1a;
+  color: #ffffff;
+}
+.sidebar-nav li:nth-child(2):before {
+  background-color: #402d5c;
+}
+.sidebar-nav li:nth-child(3):before {
+  background-color: #4c366d;
+}
+.sidebar-nav li:nth-child(4):before {
+  background-color: #583e7e;
+}
+.sidebar-nav li:nth-child(5):before {
+  background-color: #64468f;
+}
+.sidebar-nav li:nth-child(6):before {
+  background-color: #704fa0;
+}
+.sidebar-nav li:nth-child(7):before {
+  background-color: #7c5aae;
+}
+.sidebar-nav li:nth-child(8):before {
+  background-color: #8a6cb6;
+}
+.sidebar-nav li:nth-child(9):before {
+  background-color: #987dbf;
+}
+.sidebar-nav li:hover:before {
+  -webkit-transition: width 0.2s ease-in;
+  transition: width 0.2s ease-in;
+  width: 100%;
+}
+.sidebar-nav li a {
+  color: #dddddd;
+  display: block;
+  padding: 10px 15px 10px 30px;
+  text-decoration: none;
+}
+.sidebar-nav li.open:hover before {
+  -webkit-transition: width 0.2s ease-in;
+  transition: width 0.2s ease-in;
+  width: 100%;
+}
+.sidebar-nav .dropdown-menu {
+  background-color: #222222;
+  border-radius: 0;
+  border: none;
+  box-shadow: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  width: 100%;
+}
+.sidebar-nav li a:hover,
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus,
+.sidebar-nav li.open a:hover,
+.sidebar-nav li.open a:active,
+.sidebar-nav li.open a:focus {
+  background-color: transparent;
+  color: #ffffff;
+  text-decoration: none;
+}
+.sidebar-nav > .sidebar-brand {
+  font-size: 20px;
+  height: 65px;
+  line-height: 44px;
+}
+
+/*=======================
+OFF CANVAS
+==========================*/
+#wrapper {
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  padding-left: 0;
+  transition: all 0.5s ease;
+}
+#wrapper.toggled {
+  padding-left: 400px;
+}
+#wrapper.toggled #sidebar-wrapper {
+  width: 400px;
+}
+#wrapper.toggled #page-content-wrapper {
+  margin-right: -400px;
+  position: absolute;
+}
+#sidebar-wrapper {
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  background: #1a1a1a;
+  height: 100%;
+  left: 400px;
+  margin-left: -400px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  transition: all 0.5s ease;
+  width: 0;
+  z-index: 1000;
+}
+#sidebar-wrapper::-webkit-scrollbar {
+  display: none;
+}
+
+#page-content-wrapper {
+  padding-top: 70px;
+  width: 100%;
+}
+
+.overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .1);
+  z-index: 2000;
+}
+
 /*=======================
 *FOOTER
 =======================*/
-footer {
-  position: absolute;
+#footer {
+  font-family: Lato_light;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 200px;
-  background-color: #1e1f20;
-  display: block;
+  background-color: #001051;
+  z-index: 5000;
+  max-width: 100%;
+  max-height: auto;
+    
+    a{
+    color: 0000d4;
+    }
+    
+    a:hover{
+    text-decoration: none;
+    color: #fff;
+    }
+    
+    ul{
+    list-style: none;
+    font-family: Lato_semibold;
+    }
+    
+    span{
+    font-family: Lato_thinitalic;
+    letter-spacing: 2px;
+    }
+
+.footer_content{
+    padding-top: 30px;
+}
+    
+}
+
+.line{
+    width: 40px;
+    border-bottom: 1px solid #fff;
+    margin-top: -4px;
 }
 
 
-/*
-*HAMBURGER
-*/
-.burger-menu {
-  position: relative;
-  width: 50px;
-  height: 50px;
-  cursor: pointer;
-}
-.burger {
-  position: absolute;
-  background: #fff;
-  width: 100%;
-  height: 4px;
-  top: 50%;
-  right: 0px;
-  margin-top: -5px;
-  opacity: 1;
-}
-.burger::before {
-  position: absolute;
-  background: rgba(111,111,111,1);
-  width: 50px;
-  height: 4px;
-  top: 20px;
-  content: "";
-  display: block;
-}
-.burger::after {
-  position: absolute;
-  background: rgba(111,111,111,1);
-  width: 50px;
-  height: 4px;
-  bottom: 20px;
-  content: "";
-  display: block;
-}
-.burger::after, .burger::before, .burger {
-  transition: all .3s ease-in-out;
-  -webkit-transition: all .3s ease-in-out;
-}
-.burger-menu.menu-on .burger::after{
-   transform: rotate(-45deg);
-   -webkit-transform: rotate(-45deg);
-  bottom: 0px;
-}
-.burger-menu.menu-on .burger::before{
-   transform: rotate(45deg);
-   -webkit-transform: rotate(45deg);
-  top: 0px;
-}
-.burger-menu.menu-on .burger{
- background: rgba(111,111,111,.0);
+/*===============================
+SVG STTYLES
+=================================*/
+#Layer-1{
+    
 }
 
-#site-wrapper{
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-}
-
-#site-canvas{
-    width: 100%;
-    height: 100%;
-    position: relative;
-    transform: translateX(0);
-    transform: translate3d(0, 0, 0);
-    transition: 300ms ease all;
-    padding: 5% 0;
-    backface-visibility: hidden;
-}
-
-#site-menu{
-    width: 500px;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: -500px;
-    background: #fff;
-    padding: 15%;
-}
-
-.show-nav #site-canvas{
-    transform: translateX(500px);
-    transform: translate3d(500px, 0, 0);
+#Layer_3{
+        .cls-1
+        {
+        fill:none;
+        stroke:#f48a97;
+        stroke-miterlimit:10;
+        stroke-width:3px;
+        }
 }
